--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
     <link type="stylesheet" href="assets/css/reset.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
     <link href="https://fonts.googleapis.com/css?family=Amita&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -32,11 +30,11 @@
         <div class="score">
 
         </div>
-        <div class="gems">
-            <img class="amethyst" src="assets/images/amethyst.png" alt="Amethyst">
-            <img class="lapis" src="assets/images/lapis.png" alt="Lapis">
-            <img class="peridot" src="assets/images/peridot.png" alt="Peridot">
-            <img class="pearl" src="assets/images/pearl.png" alt="Pearl">
+        <div id="gems">
+            <img class="amethyst gems" src="assets/images/amethyst.png" alt="Amethyst">
+            <img class="lapis gems" src="assets/images/lapis.png" alt="Lapis">
+            <img class="peridot gems" src="assets/images/peridot.png" alt="Peridot">
+            <img class="pearl gems" src="assets/images/pearl.png" alt="Pearl">
         </div>
 
     </div>
