--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <h2>Staring the Crystal Gems!!</h2>
         <p>Here is how the game works. You have to click on the Crystal Gems to gain enough fire power to defeat White Diamond. But be careful! Too much fire power can give you a tummy ache.</p>
         <div class="white">
+            <h1>To beat White Diamond you need: <span id="number-to-guess"></span></h1>
             <img class="diamond" src="assets/images/white.jpg" alt="White Diamond">
+            
         </div>
         <div class="score">
 
