--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
             
         </div>
         <div class="score">
+            
+        </div>
+        <div class="win-stats">
 
         </div>
+        <div class="loss-stats">
+
+            </div>
         <div id="gems">
-            <img class="amethyst gems" src="assets/images/amethyst.png" alt="Amethyst">
-            <img class="lapis gems" src="assets/images/lapis.png" alt="Lapis">
+            <img class="amethyst gems" src="assets/images/amethyst2.png" alt="Amethyst">
+            <img class="lapis gems" src="assets/images/lapis2.png" alt="Lapis">
             <img class="peridot gems" src="assets/images/peridot.png" alt="Peridot">
             <img class="pearl gems" src="assets/images/pearl.png" alt="Pearl">
         </div>
